# modernprogtech

./: .gitignore  README.md  requests.cpp
SemesterOne/Sortings/: Sortings.cpp
SemesterOne/first-test(refactoring)/: task1(max, min, etc).cpp
SemesterOne/parser_ManyFiles/: CMakeLists.txt
SemesterOne/third-hw(refactoring)/many-files (after refactoring)/: my_algorithms.cpp
SemesterOne/third-hw(refactoring)/one-file (before refactoring)/: after_refactoring_main.cpp  before_refactoring_main.cpp
SemesterOne/truly-third-hw(menu)/: menu.hpp  menu_func.cpp  menu_items.hpp
SemesterThree/SuperMario/: main.cpp
SemesterTwo/long_numbers/: CMakeLists.txt  long_number.cpp  long_number.hpp
SemesterTwo/long_numbers/src/: CMakeLists.txt  long_number.cpp  long_number.hpp
SemesterTwo/long_numbers/test/: CMakeLists.txt  test.cpp  test_long_number.cpp
SemesterTwo/multiproject/: build.bat
SemesterTwo/multiproject/projects/: CMakeLists.txt
SemesterTwo/vector_list/: CMakeLists.txt  doubly_linked_list.cpp  vector.cpp
SemesterTwo/vector_list/src/: CMakeLists.txt  doubly_linked_list.cpp  vector.cpp
SemesterTwo/vector_list/test/: CMakeLists.txt  tests.cpp
SemesterTwo/vector_list/test_list/: CMakeLists.txt  tests_list.cpp
first-test(refactoring)/: task1(max, min, etc).cpp
parser_ManyFiles/: build_and_run.bat  build_and_run2.bat
second_homework (refactoring)/: after_refactoring_sshpetnii.cpp
third-hw(refactoring)/many-files (after refactoring)/: build_run.bat  main.cpp
third-hw(refactoring)/one-file (before refactoring)/: after_refactoring_main.cpp  build_run.bat
(+14 files in other folders)
